--- a/Award_Pool_Overwolf_App_-_source_code/Award Pool/public/css/header.css
+++ b/Award_Pool_Overwolf_App_-_source_code/Award Pool/public/css/header.css
@@ -31,7 +31,7 @@
 
 .app-header {
   display: flex;
-  background-color: #272727;
+  background-color: #0a002a;
   align-items: center;
   
   z-index: 9999;
