--- a/Award_Pool_Overwolf_App_-_source_code/Award Pool/public/css/ingame.css
+++ b/Award_Pool_Overwolf_App_-_source_code/Award Pool/public/css/ingame.css
@@ -5,7 +5,6 @@
 }
 
 body {
-  background-color: #333333;
   margin: 0px;
   display: block;
   font-size: 14px;
@@ -13,72 +12,124 @@ body {
 
 main {
   position: relative;
-  height: calc(100vh - 30px);
+  height: calc(100vh - 40px);
   overflow: auto;
 }
 
 main div.game-title {
-  padding: 20px;
-  color: white;
-  font-size: 20px;
+  color: var(--white);
+  font-family: var(--font-family-quicksand);
+  font-size: var(--font-size-l);
+  font-style: normal;
   font-weight: 700;
-  background: linear-gradient(45deg, #eb0e71, transparent);
+  background: rgb(238, 50, 128);
+  background: linear-gradient(
+    90deg,
+    rgba(238, 50, 128, 1) 0%,
+    rgba(124, 109, 232, 0.43) 100%
+  );
+  display: flex;
+  align-items: center;
+  padding: 25px 15px;
 }
 
 main div.challenge-panel {
-  margin: 5px;
-  border-radius: 8px;
-  background: rgba(0, 0, 0, 0.3);
-  padding: 1px 10px;
-  color: white;
+  margin: 20px;
+  padding: 15px;
+  border-radius: 10px;
+  background-color: #242424;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  overflow-y: auto;
+}
+.challenge-item {
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+  background-color: #333;
+  border-radius: 4px;
 }
 
-main div.challenge-panel h5 {
-  font-size: 16px;
-  margin: 20px 0;
+main div.challenge-panel section {
+  margin-bottom: 15px;
 }
 
-main div.challenge-panel > .challenge-item {
-  padding-bottom: 8px;
+main div.challenge-panel section:last-child {
+  margin-bottom: 0;
 }
 
-main div.challenge-panel > .challenge-item ~ .challenge-item {
-  border-top: 2px solid rgba(0, 0, 0, 0.25);
+.challenge-item .partner-icon {
+  display: flex;
 }
 
-main div.challenge-panel .challenge-item p {
-  font-size: 12px;
-  margin: 8px 5px;
+.challenge-item .partner-icon img {
+  display: block;
+  width: 45px;
+  height: 45px;
+}
+
+.challenge-item .details {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  padding: 0 10px;
+}
+
+.challenge-item .details > div {
+  display: flex;
+}
+
+.challenge-item .details > div p {
+  color: var(--white);
+  font-family: var(--font-family-quicksand);
+  font-size: var(--font-size-xs);
+  font-style: normal;
+  font-weight: 500;
+  margin: 0;
+}
+
+.challenge-item .details .item-title {
+  margin-bottom: 10px;
 }
 
 main div.challenge-panel .challenge-item .progress-bg {
-  padding: 3px;
-  background: rgba(0, 0, 0, 0.25);
-  border-radius: 6px;
-  -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.25),
-    0 1px rgba(255, 255, 255, 0.08);
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.25),
-    0 1px rgba(255, 255, 255, 0.08);
+  padding: 0;
+  border-radius: 7px;
+  background-color: #242424;
 }
 
 main div.challenge-panel .challenge-item .progress-bar {
-  height: 8px;
-  border-radius: 4px;
-  background-image: linear-gradient(
-    to bottom,
-    rgba(255, 255, 255, 0.3),
-    rgba(255, 255, 255, 0.05)
-  );
-  transition-property: width, background-color;
-  box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.25),
-    inset 0 1px rgba(255, 255, 255, 0.1);
-  background: #eb0e71;
+  height: 15px;
+  border-radius: 7px;
+  background-color: #ee3280;
 }
 
-main div.challenge-panel .challenge-item .progress-value {
+.challenge-item .result {
   display: flex;
-  justify-content: space-between;
-  padding: 2px 5px;
+  flex-basis: 40px;
+  min-width: 40px;
+  justify-content: flex-end;
+  overflow: hidden;
+  word-break: break-word;
+}
+.challenge-item .result p {
+  margin: 0;
+  color: var(--white);
+  font-family: var(--font-family-quicksand);
+  font-size: var(--font-size-xxs);
+  font-style: normal;
+  font-weight: 500;
+}
+
+.widget.checkmark {
+  background-color: var(--gamboge);
+  border-radius: 6px;
+  width: 25px;
+  height: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 h1 {
@@ -205,4 +256,65 @@ button.logCopy {
 button.logCopy:hover {
   background: #8d8d8d;
   color: #ffffff;
+}
+
+.in-game .app-header {
+  height: 40px;
+  background-color: #333;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+}
+
+.in-game .app-header .app-header-icon {
+  width: 140px;
+}
+
+.in-game .app-header .show-hide {
+  color: #babbbe;
+}
+
+.in-game .app-header .show-hide-text {
+  color: #babbbe;
+}
+
+.in-game .app-header .show-hide {
+  font-family: var(--font-family-quicksand);
+  font-size: var(--font-size-s);
+  font-style: normal;
+  font-weight: 700;
+  letter-spacing: 0px;
+  line-height: 20px;
+}
+
+.in-game .app-header .show-hide-text {
+  color: #babbbe;
+  font-style: normal;
+}
+
+.in-game .app-header .show-hide a {
+  color: var(--white);
+  font-style: normal;
+  text-decoration: underline;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  background-color: #333;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #7c6de8;
+  border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #5e54ab;
 }
