--- a/Award_Pool_Overwolf_App_-_source_code/Award Pool/public/css/ingame.css
+++ b/Award_Pool_Overwolf_App_-_source_code/Award Pool/public/css/ingame.css
@@ -59,6 +59,17 @@ main div.challenge-panel section:last-child {
   margin-bottom: 0;
 }
 
+main div.ad-container {
+  display: flex;
+  flex-basis: 300px;
+  flex-direction: column;
+  margin: 0 20px 20px 20px;
+  background-color: var(--black);
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+}
+
 .challenge-item .partner-icon {
   display: flex;
 }
