fix: fixes ad related problems

--- a/Award_Pool_Overwolf_App_-_source_code/Award Pool/public/css/ad.css
+++ b/Award_Pool_Overwolf_App_-_source_code/Award Pool/public/css/ad.css
@@ -8,3 +8,10 @@
   justify-content: center;
   border-radius: 10px;
 }
+
+.widget.ad .ow-ad {
+  display: block;
+  width: 400px;
+  height: 300px;
+  z-index: 2;
+}
